totally messed up project... switching to new branch with fresh code, hoping it'll be less work to make it compilable...