@@ -19,7 +19,9 @@
 
 package org.apache.fop.fonts;
 
+import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -33,15 +35,12 @@ import org.apache.xmlgraphics.fonts.Glyphs;
 public class SimpleSingleByteEncoding implements SingleByteEncoding {
 
     private final String name;
-    private final List mapping = new java.util.ArrayList();
-    // List<NamedCharacter>
-    private final Map charMap = new java.util.HashMap();
-
-    // Map<Character(Unicode), Character(code point)>
+    private final List<NamedCharacter> mapping = new ArrayList<>();
+    private final Map<Character, Character> charMap = new HashMap<>();
 
     /**
      * Main constructor.
-     * 
+     *
      * @param name
      *            the encoding's name
      */
@@ -58,7 +57,7 @@ public class SimpleSingleByteEncoding implements SingleByteEncoding {
     /** {@inheritDoc} */
     @Override
     public char mapChar(final char c) {
-        final Character nc = (Character) this.charMap.get(new Character(c));
+        final Character nc = this.charMap.get(Character.valueOf(c));
         if (nc != null) {
             return nc.charValue();
         }
@@ -71,7 +70,7 @@ public class SimpleSingleByteEncoding implements SingleByteEncoding {
         final String[] map = new String[getSize()];
         Arrays.fill(map, Glyphs.NOTDEF);
         for (int i = getFirstChar(); i <= getLastChar(); ++i) {
-            final NamedCharacter ch = (NamedCharacter) this.mapping.get(i - 1);
+            final NamedCharacter ch = this.mapping.get(i - 1);
             map[i] = ch.getName();
         }
         return map;
@@ -79,7 +78,7 @@ public class SimpleSingleByteEncoding implements SingleByteEncoding {
 
     /**
      * Returns the index of the first defined character.
-     * 
+     *
      * @return the index of the first defined character (always 1 for this
      *         class)
      */
@@ -89,7 +88,7 @@ public class SimpleSingleByteEncoding implements SingleByteEncoding {
 
     /**
      * Returns the index of the last defined character.
-     * 
+     *
      * @return the index of the last defined character
      */
     public int getLastChar() {
@@ -98,7 +97,7 @@ public class SimpleSingleByteEncoding implements SingleByteEncoding {
 
     /**
      * Returns the number of characters defined by this encoding.
-     * 
+     *
      * @return the number of characters
      */
     public int getSize() {
@@ -107,7 +106,7 @@ public class SimpleSingleByteEncoding implements SingleByteEncoding {
 
     /**
      * Indicates whether the encoding is full (with 256 code points).
-     * 
+     *
      * @return true if the encoding is full
      */
     public boolean isFull() {
@@ -116,7 +115,7 @@ public class SimpleSingleByteEncoding implements SingleByteEncoding {
 
     /**
      * Adds a new character to the encoding.
-     * 
+     *
      * @param ch
      *            the named character
      * @return the code point assigned to the character
@@ -132,14 +131,14 @@ public class SimpleSingleByteEncoding implements SingleByteEncoding {
         }
         final char newSlot = (char) (getLastChar() + 1);
         this.mapping.add(ch);
-        this.charMap.put(new Character(ch.getSingleUnicodeValue()),
-                new Character(newSlot));
+        this.charMap.put(Character.valueOf(ch.getSingleUnicodeValue()),
+                Character.valueOf(newSlot));
         return newSlot;
     }
 
     /**
      * Returns the named character at a given code point in the encoding.
-     * 
+     *
      * @param codePoint
      *            the code point of the character
      * @return the NamedCharacter (or null if no character is at this position)
@@ -150,7 +149,7 @@ public class SimpleSingleByteEncoding implements SingleByteEncoding {
                     "codePoint must be between 0 and 255");
         }
         if (codePoint <= getLastChar()) {
-            return (NamedCharacter) this.mapping.get(codePoint - 1);
+            return this.mapping.get(codePoint - 1);
         } else {
             return null;
         }
