@@ -41,20 +41,20 @@ public class RtfStringConverter {
     private static final RtfStringConverter INSTANCE = new RtfStringConverter();
 
     private static final Map SPECIAL_CHARS;
-    private static final Character DBLQUOTE = new Character('\"');
-    private static final Character QUOTE = new Character('\'');
-    private static final Character SPACE = new Character(' ');
+    private static final Character DBLQUOTE = Character.valueOf('\"');
+    private static final Character QUOTE = Character.valueOf('\'');
+    private static final Character SPACE = Character.valueOf(' ');
 
     /** List of characters to escape with corresponding replacement strings */
     static {
-        SPECIAL_CHARS = new HashMap();
-        SPECIAL_CHARS.put(new Character('\t'), "tab");
-        SPECIAL_CHARS.put(new Character('\n'), "line");
-        SPECIAL_CHARS.put(new Character('\''), "rquote");
-        SPECIAL_CHARS.put(new Character('\"'), "rdblquote");
-        SPECIAL_CHARS.put(new Character('\\'), "\\");
-        SPECIAL_CHARS.put(new Character('{'), "{");
-        SPECIAL_CHARS.put(new Character('}'), "}");
+        SPECIAL_CHARS = new HashMap<>();
+        SPECIAL_CHARS.put(Character.valueOf('\t'), "tab");
+        SPECIAL_CHARS.put(Character.valueOf('\n'), "line");
+        SPECIAL_CHARS.put(Character.valueOf('\''), "rquote");
+        SPECIAL_CHARS.put(Character.valueOf('\"'), "rdblquote");
+        SPECIAL_CHARS.put(Character.valueOf('\\'), "\\");
+        SPECIAL_CHARS.put(Character.valueOf('{'), "{");
+        SPECIAL_CHARS.put(Character.valueOf('}'), "}");
     }
 
     /** singleton pattern */
@@ -104,13 +104,13 @@ public class RtfStringConverter {
         final StringBuilder sb = new StringBuilder(Math.max(16, str.length()));
         // TODO: could be made more efficient (binary lookup, etc.)
         for (int i = 0; i < str.length(); ++i) {
-            final Character c = new Character(str.charAt(i));
+            final Character c = Character.valueOf(str.charAt(i));
             Character d;
             String replacement;
             if (i != 0) {
-                d = new Character(str.charAt(i - 1));
+                d = Character.valueOf(str.charAt(i - 1));
             } else {
-                d = new Character(str.charAt(i));
+                d = Character.valueOf(str.charAt(i));
             }
 
             // This section modified by Chris Scott
